[project]
name = "ar5iv2md"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hiroaki Ogasawara", email = "13391129+xhiroga@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
]

[project.scripts]
ar5iv2md = "ar5iv2md:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
